# random

airbnb/: airbnb.ipynb
airbnb/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
airbnb/catboost_info/learn/: events.out.tfevents
patio/: BrickData.py  draw.py  duck.eps  patio.py  test.py
telegram-outline/: scrapper.py
timelapse/: main.py  pyproject.toml
