[tool.poetry]
name = "timelapse"
version = "0.1.0"
description = ""
authors = ["Gustavo Maia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
click = "^8.1.3"
tqdm = "^4.64.1"
moviepy = "^1.0.3"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
